--- a/src/styles/scss/elements/_sidebar.scss
+++ b/src/styles/scss/elements/_sidebar.scss
@@ -61,9 +61,10 @@
 .side-bar button.close-icon-menu {
     max-width: max-content;
     margin-right: auto;
-    margin-left: -53px;
-    margin-top: 0;
+    margin-left: -44px;
+    margin-top: 3px;
     position: absolute;
+
     i{
         color: #ffffff;
         height: 50px;
