--- a/public/assets/css/newStyle.css
+++ b/public/assets/css/newStyle.css
@@ -4,12 +4,12 @@
       margin: auto;
       margin-bottom: 30px;
 } */
- .registration-wrapper-1 {
+.registration-wrapper-1 {
   max-width: 800px;
   border-radius: 20px;
   background: #FFFFFF;
   margin: auto;
-  padding:  100px;
+  padding: 100px;
 }
 
 @media only screen and (max-width: 767px) {
@@ -22,4 +22,44 @@
   .registration-wrapper-1 {
     padding: 40px 15px;
   }
+}
+
+li.category-hover-header.language-hover a {
+  position: relative !important;
+  padding-right: 7px !important;
+}
+
+.countdown .countDown {
+  display: flex;
+  align-items: center;
+  gap: 0px;
+}
+
+.contact-number-area a:hover {
+  color: black !important;
+}
+
+.contact-number-area:hover {
+  color: black !important;
+}
+.side-bar button.close-icon-menu {
+  max-width: max-content;
+  margin-right: auto;
+  margin-left: -44px;
+  margin-top: 3px;
+  position: absolute;
+}
+.mobile-menu-main nav ul li.has-droupdown::after {
+  position: absolute;
+  content: "\f078";
+  font-family: "Font Awesome 6 pro" !important;
+  font-size: 16px;
+  right: 0;
+  font-weight: 400;
+  top: 5px;
+  padding: 8px 13px;
+  color: var(--color-primary);
+  /* background: var(--color-primary) !important; */
+  pointer-events: none;
+  cursor: pointer;
 }
